@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1997, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -31,15 +31,16 @@ import java.io.PrintWriter;
 import java.text.BreakIterator;
 import java.text.Collator;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.IllformedLocaleException;
 import java.util.List;
 import java.util.Locale;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import javax.tools.JavaFileManager;
 import javax.tools.JavaFileObject;
@@ -50,11 +51,13 @@ import com.sun.tools.javac.file.BaseFileManager;
 import com.sun.tools.javac.file.JavacFileManager;
 import com.sun.tools.javac.jvm.Target;
 import com.sun.tools.javac.main.Arguments;
-import com.sun.tools.javac.main.CommandLine;
 import com.sun.tools.javac.util.ClientCodeException;
 import com.sun.tools.javac.util.Context;
 import com.sun.tools.javac.util.Log;
+import com.sun.tools.javac.util.ModuleHelper;
 import com.sun.tools.javac.util.StringUtils;
+
+import jdk.internal.opt.CommandLine;
 
 import jdk.javadoc.doclet.Doclet;
 import jdk.javadoc.doclet.Doclet.Option;
@@ -71,11 +74,6 @@ import static jdk.javadoc.internal.tool.Main.Result.*;
 /**
  * Main program of Javadoc.
  * Previously named "Main".
- *
- *  <p><b>This is NOT part of any supported API.
- *  If you write code that depends on this, you do so at your own risk.
- *  This code and its internal interfaces are subject to change or
- *  deletion without notice.</b>
  */
 public class Start {
 
@@ -195,7 +193,7 @@ public class Start {
     }
 
     private void showUsage(String headerKey, ToolOption.Kind kind, String footerKey) {
-        log.noticeUsingKey(headerKey);
+        showLinesUsingKey(headerKey);
         showToolOptions(kind);
 
         // let doclet print usage information
@@ -204,16 +202,17 @@ public class Start {
                     ? Option.Kind.EXTENDED
                     : Option.Kind.STANDARD);
         }
-        if (footerKey != null)
-            log.noticeUsingKey(footerKey);
+        if (footerKey != null) {
+            showLinesUsingKey(footerKey);
+        }
     }
 
     private void showVersion(String labelKey, String value) {
-        log.noticeUsingKey(labelKey, log.programName, value);
+        showLinesUsingKey(labelKey, log.programName, value);
     }
 
     private void showToolOptions(ToolOption.Kind kind) {
-        Comparator<ToolOption> comp = new Comparator<ToolOption>() {
+        var comp = new Comparator<ToolOption>() {
             final Collator collator = Collator.getInstance(Locale.US);
             { collator.setStrength(Collator.PRIMARY); }
 
@@ -252,9 +251,9 @@ public class Start {
         if (options.isEmpty()) {
             return;
         }
-        log.noticeUsingKey("main.doclet.usage.header", name);
+        showLinesUsingKey("main.doclet.usage.header", name);
 
-        Comparator<Doclet.Option> comp = new Comparator<Doclet.Option>() {
+        var comp = new Comparator<Doclet.Option>() {
             final Collator collator = Collator.getInstance(Locale.US);
             { collator.setStrength(Collator.PRIMARY); }
 
@@ -307,22 +306,30 @@ public class Start {
         if (synopses.length() < DEFAULT_SYNOPSIS_WIDTH
                 && !description.contains("\n")
                 && (SMALL_INDENT.length() + DEFAULT_SYNOPSIS_WIDTH + 1 + description.length() <= DEFAULT_MAX_LINE_LENGTH)) {
-            log.notice(String.format(COMPACT_FORMAT, synopses, description));
+            showLines(String.format(COMPACT_FORMAT, synopses, description));
             return;
         }
 
         // If option synopses fit on a single line of reasonable length, show that;
         // otherwise, show 1 per line
         if (synopses.length() <= DEFAULT_MAX_LINE_LENGTH) {
-            log.notice(SMALL_INDENT + synopses);
+            showLines(SMALL_INDENT + synopses);
         } else {
             for (String name: names) {
-                log.notice(SMALL_INDENT + name + parameters);
+                showLines(SMALL_INDENT + name + parameters);
             }
         }
 
         // Finally, show the description
-        log.notice(LARGE_INDENT + description.replace("\n", "\n" + LARGE_INDENT));
+        showLines(LARGE_INDENT + description.replace("\n", "\n" + LARGE_INDENT));
+    }
+
+    private void showLinesUsingKey(String key, Object... args) {
+        showLines(log.getText(key, args));
+    }
+
+    private void showLines(String message) {
+        log.printRawLines(Log.WriterKind.STDOUT, message);
     }
 
 
@@ -339,7 +346,7 @@ public class Start {
             error("main.cant.read", e.getMessage());
             return ERROR;
         }
-        return begin(allArgs, Collections.emptySet());
+        return begin(allArgs, Set.of());
     }
 
     // Called by the JSR 199 API
@@ -452,6 +459,7 @@ public class Start {
             if (haveErrors && result.isOK()) {
                 result = ERROR;
             }
+            log.flush();
             log.printErrorWarningCounts();
             log.flush();
         }
@@ -520,7 +528,21 @@ public class Start {
         }
 
         if (fileManager instanceof BaseFileManager bfm) {
+            // standard file manager: use direct support for handling options
             bfm.handleOptions(options.fileManagerOptions());
+        } else {
+            // unrecognized file manager:
+            for (Map.Entry<com.sun.tools.javac.main.Option, String> e: options.fileManagerOptions().entrySet()) {
+                String optName = e.getKey().getPrimaryName();
+                String optValue = e.getValue();
+                try {
+                    if (!fileManager.handleOption(optName, List.of(optValue).iterator())) {
+                        log.error("main.unknown.option.for.filemanager", optName);
+                    }
+                } catch (IllegalArgumentException ex) {
+                    log.error("main.bad.arg.for.filemanager.option", optName, ex.getMessage());
+                }
+            }
         }
 
         String mr = com.sun.tools.javac.main.Option.MULTIRELEASE.primaryName;
@@ -538,6 +560,17 @@ public class Start {
                     throw new ToolException(CMDERR, text);
                 }
             }
+        }
+
+        // Allow doclets to access internal API if the appropriate
+        // option is given on the command line.
+        // A better solution would be to modify the javadoc API to
+        // permit an instance of an appropriately configured instance
+        // of a doclet to be specified instead of the name of the
+        // doclet class and optional doclet path.
+        // See https://bugs.openjdk.org/browse/JDK-8263219
+        if (options.compilerOptions().isSet("accessInternalAPI")) {
+            ModuleHelper.addExports(ModuleHelper.class.getModule(), doclet.getClass().getModule());
         }
 
         JavadocTool comp = JavadocTool.make0(context);
@@ -614,7 +647,7 @@ public class Start {
                             text = log.getText("main.unnecessary_arg_provided", argBase);
                             throw new OptionException(ERROR, this::showUsage, text);
                         case 1:
-                            if (!opt.process(arg, Collections.singletonList(argVal))) {
+                            if (!opt.process(arg, List.of(argVal))) {
                                 m = -1;
                             }
                             break;
@@ -638,9 +671,42 @@ public class Start {
         // check if arg is accepted by the tool before emitting error
         if (!isToolOption) {
             text = log.getText("main.invalid_flag", arg);
-            throw new OptionException(ERROR, this::showUsage, text);
+            throw new OptionException(ERROR, () -> reportBadOption(arg), text);
         }
         return m * idx;
+    }
+
+    private void reportBadOption(String name) {
+        var allOptionNames = Stream.concat(
+                getToolOptions().getSupportedOptions().stream()
+                        .flatMap(o -> o.getNames().stream()),
+                docletOptions.stream()
+                        .flatMap(o -> o.getNames().stream()));
+        record Pair(String word, double similarity) { }
+        final double MIN_SIMILARITY = 0.7;
+        var suggestions = allOptionNames
+                .map(t -> new Pair(t, similarity(t, name)))
+                .sorted(Comparator.comparingDouble(Pair::similarity).reversed() /* more similar first */)
+                // .peek(p -> System.out.printf("%.3f, (%s ~ %s)%n", p.similarity, p.word, name)) // debug
+                .takeWhile(p -> Double.compare(p.similarity, MIN_SIMILARITY) >= 0)
+                .map(Pair::word)
+                .toList();
+        switch (suggestions.size()) {
+            case 0 -> { }
+            case 1 -> showLinesUsingKey("main.did-you-mean", suggestions.getFirst());
+            default -> showLinesUsingKey("main.did-you-mean-one-of", String.join(" ", suggestions));
+        }
+        showLinesUsingKey("main.for-more-details-see-usage");
+    }
+
+    // a value in [0, 1] range: the closer the value is to 1, the more similar
+    // the strings are
+    private static double similarity(String a, String b) {
+        // Normalize the distance so that similarity between "x" and "y" is
+        // less than that of "ax" and "ay". Use the greater of two lengths
+        // as normalizer, as it's an upper bound for the distance.
+        return 1.0 - ((double) StringUtils.DamerauLevenshteinDistance.of(a, b))
+                / Math.max(a.length(), b.length());
     }
 
     private static Set<? extends Option> getSupportedOptionsOf(Doclet doclet) {
